--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
 @import "./css/global.css";
 @import "./css/header.css";
 
+:root{
+    --home-bg: url(../assets/bandeira.jpeg);
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -75,4 +79,11 @@ ul{
     margin-left: 63.5rem;
     margin-block: 3.5rem;
     margin-bottom: 3.5rem;
+}
+
+
+.logo{
+    width: 25.5rem;
+    height: 15.75rem;
+    padding: 2.5rem;
 }
