primeiro commit do HTML

--- a/css/global.css
+++ b/css/global.css
@@ -12,6 +12,7 @@
     --green: #8f9044;
     --yellow: #f8a523;
     --orange: #fc8020;
+    --dark-orange: #e94e1b;
     --red: #cf1500;
     --dark-grey: #352f3d;
     --blue: #211b74;
