--- a/pages/cultura.css
+++ b/pages/cultura.css
@@ -11,6 +11,10 @@ header{
     padding: 2.5rem;
 }
 
+h1, h2 {
+    text-align: center;
+}
+
 p{
     display: flex;
     justify-content: space-around;
